feat: add searchable creator library
